--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -89,10 +89,10 @@ jobs:
         run: |
           WEBSITE1_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-formulieren/open-forms/refs/heads/master/CHANGELOG.rst)
           # Extract the section for OPENFORMS_IMAGE_TAG
-          VERSION1_CONTENT=$(echo "$WEBSITE1_CHANGELOG" | awk "/^${{ env.OPENFORMS_IMAGE_TAG }}/,/^$/" | sed '/^$/d')
+          VERSION1_CONTENT=$(echo "$WEBSITE1_CHANGELOG" | awk "/^${{ env.OPENFORMS_IMAGE_TAG }} /,/^## /" | sed '$d')
 
           # Extract the section for OPENFORMS_IMAGE_TAG_LATEST
-          VERSION2_CONTENT=$(echo "$WEBSITE1_CHANGELOG" | awk "/^${{ env.OPENFORMS_IMAGE_TAG_LATEST }}/,/^$/" | sed '/^$/d')
+          VERSION2_CONTENT=$(echo "$WEBSITE1_CHANGELOG" | awk "/^${{ env.OPENFORMS_IMAGE_TAG_LATEST }} /,/^## /")
 
           # Combine both versions into an environment variable
           echo "openforms<<EOF" >> $GITHUB_ENV
