kiss + adapter als contact in podiumd

--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -62,3 +62,9 @@ dependencies:
     condition: kisselastic.enabled
     tags:
       - contact
+  - name: kiss
+    version: 1.0.6
+    repository: "@kiss"
+    condition: kiss.enabled
+    tags:
+      - contact
