--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -434,6 +434,10 @@ kisselastic:
       - podiumd
 
 kiss:
+  configuration:
+    oidcUrl: https://kiss.example.nl
+    oidcSecret: "<kiss>"
+
   brp:
     baseUrl: ""
     apiKey: ""
