fix: enable kiss by default
Enable kiss by default.

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -434,6 +434,7 @@ kisselastic:
       - podiumd
 
 kiss:
+  enabled: true
   configuration:
     oidcUrl: https://kiss.example.nl
     oidcSecret: "<kiss>"
