fix: use kiss-frontend chart
Use the kiss-frontend chat version 1.0.51.
Add bas to CODEOWNERS.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-@infojohn @canerortlek @sjoerdie @PascalIcatt  @sandervdbenschede
+@infojohn @canerortlek @sjoerdie @PascalIcatt  @sandervdbenschede @bas-info-nl
