--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -34,7 +34,7 @@ keycloak:
     adminUser: admin
     adminPassword: ChangeMeNow
   externalDatabase:
-    host: ""
+    host: "dummy"
     database: ""
     user: ""
   keycloakConfigCli:
