--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -89,7 +89,7 @@ jobs:
         run: |
           # Define the changelog URL
           WEBSITE1_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-formulieren/open-forms/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENFORMS_IMAGE_TAG }} /,/^ ${{ env.OPENFORMS_IMAGE_TAG_LATEST }} /')
-          echo "openforms<<EOF" >> $GITHUB_ENV
+          echo "changelog<<EOF" >> $GITHUB_ENV
           echo "### Open Formulieren" >> $GITHUB_ENV
           echo "$WEBSITE1_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -98,7 +98,7 @@ jobs:
         id: fetch_changelogs_openzaak
         run: |
           WEBSITE2_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-zaak/main/CHANGELOG.rst | awk '/^${{ env.OPENZAAK_IMAGE_TAG }} /,/^${{ env.OPENZAAK_IMAGE_TAG_LATEST }} /')
-          echo "openzaak<<EOF" >> $GITHUB_ENV
+          echo "changelog<<EOF" >> $GITHUB_ENV
           echo "### Open Zaak" >> $GITHUB_ENV
           echo "$WEBSITE2_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -107,7 +107,7 @@ jobs:
         id: fetch_changelogs_openklant
         run: |
           WEBSITE3_CHANGELOG=$(curl -s https://raw.githubusercontent.com/maykinmedia/open-klant/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENKLANT_IMAGE_TAG }} /,/^${{ env.OPENKLANT_IMAGE_TAG_LATEST }} /')
-          echo "openklant<<EOF" >> $GITHUB_ENV
+          echo "changelog<<EOF" >> $GITHUB_ENV
           echo "### Open Klant" >> $GITHUB_ENV
           echo "$WEBSITE3_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -116,7 +116,7 @@ jobs:
         id: fetch_changelogs_opennotificaties
         run: |
           WEBSITE4_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-notificaties/refs/heads/main/CHANGELOG.rst | awk '/^${{ env.OPENNOTIFICATIES_IMAGE_TAG }} /,/^${{ env.OPENNOTIFICATIES_IMAGE_TAG_LATEST }} /')
-          echo "opennotificaties<<EOF" >> $GITHUB_ENV
+          echo "changelog<<EOF" >> $GITHUB_ENV
           echo "### Open Notificaties" >> $GITHUB_ENV
           echo "$WEBSITE4_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -125,7 +125,7 @@ jobs:
         id: fetch_changelogs_objecten
         run: |
            WEBSITE5_CHANGELOG=$(curl -s https://raw.githubusercontent.com/maykinmedia/objects-api/refs/heads/stable/2.4.x/CHANGELOG.rst | awk '/^${{ env.OBJECTEN_IMAGE_TAG }} /,/^${{ env.OBJECTEN_IMAGE_TAG_LATEST }} /')
-           echo "objecten<<EOF" >> $GITHUB_ENV
+           echo "changelog<<EOF" >> $GITHUB_ENV
            echo "### Open Klant" >> $GITHUB_ENV
            echo "$WEBSITE5_CHANGELOG" >> $GITHUB_ENV
            echo "EOF" >> $GITHUB_ENV
@@ -134,7 +134,7 @@ jobs:
         id: fetch_changelogs_objecttypen
         run: |
           WEBSITE6_CHANGELOG=$(curl -s https://raw.githubusercontent.com/maykinmedia/objecttypes-api/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OBJECTTYPEN_IMAGE_TAG }} /,/^${{ env.OBJECTTYPEN_IMAGE_TAG_LATEST }} /')
-          echo "objecttypen<<EOF" >> $GITHUB_ENV
+          echo "changelog<<EOF" >> $GITHUB_ENV
           echo "### Objecttypen" >> $GITHUB_ENV
           echo "$WEBSITE6_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -143,7 +143,7 @@ jobs:
         id: fetch_changelogs_openinwoner
         run: |
           WEBSITE7_CHANGELOG=$(curl -s https://api.github.com/repos/maykinmedia/open-inwoner/releases/latest | awk '/^${{ env.OPENINWONER_IMAGE_TAG }} /,/^${{ env.OPENINWONER_IMAGE_TAG_LATEST }} /')
-          echo "openinwoner<<EOF" >> $GITHUB_ENV
+          echo "changelog<<EOF" >> $GITHUB_ENV
           echo "### Open Inwoner" >> $GITHUB_ENV
           echo "$WEBSITE7_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -176,13 +176,7 @@ jobs:
             ## Changes in this Release
             ${{ env.commits }}
             ## Changelogs
-            ${{ env.openforms }}
-            ${{ env.openzaak }}
-            ${{ env.openklant }}
-            ${{ env.opennotificaties }}
-            ${{ env.objecten }}
-            ${{ env.objecttypen }}
-            ${{ env.openinwoner }}
+            ${{ env.changelog }}
             
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
