--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -97,11 +97,9 @@ jobs:
       - name: Fetch changelogs of Open Zaak 
         id: fetch_changelogs_openzaak
         run: |
-          WEBSITE2_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-zaak/main/CHANGELOG.rst | awk '/^${{ env.OPENZAAK_IMAGE_TAG_LATEST }}/ {flag=1} /^1.[0-9]+\.[0-9]+ / && $1 != "{{ env.OPENZAAK_IMAGE_TAG_LATEST }" {flag=0} flag')
-          echo "openzaak<<EOF" >> $GITHUB_ENV
-          echo "### Open Zaak" >> $GITHUB_ENV
+          WEBSITE2_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-zaak/main/CHANGELOG.rst | awk "/^${OPENZAAK_IMAGE_TAG_LATEST} / {flag=1} /^1\\.[0-9]+\\.[0-9]+ / && \$1 != \"${OPENZAAK_IMAGE_TAG_LATEST}\" {flag=0} flag")
+          echo "Changelog for version ${OPENZAAK_IMAGE_TAG_LATEST}:"
           echo "$WEBSITE2_CHANGELOG" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
           
       - name: Fetch changelog of Open Klant
         id: fetch_changelogs_openklant
@@ -178,6 +176,6 @@ jobs:
             ## Changelogs
             ${{ env.openforms }}
             ${{ env.openinwoner }}
-            ${{ env.openzaak }}
+            ${{ env.OPENZAAK_IMAGE_TAG_LATEST }}
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
