--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -179,3 +179,4 @@ jobs:
             ${{ env.WEBSITE2_CHANGELOG }}
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          WEBSITE2_CHANGELOG: ${{ env.WEBSITE2_CHANGELOG }}
