--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -98,9 +98,14 @@ jobs:
         id: fetch_changelogs_openzaak
         run: |
           WEBSITE2_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-zaak/main/CHANGELOG.rst | awk "/^${OPENZAAK_IMAGE_TAG_LATEST} / {flag=1} /^1\\.[0-9]+\\.[0-9]+ / && \$1 != \"${OPENZAAK_IMAGE_TAG_LATEST}\" {flag=0} flag")
+          # Debugging output
           echo "Changelog for version ${OPENZAAK_IMAGE_TAG_LATEST}:"
           echo "$WEBSITE2_CHANGELOG"
-          echo "WEBSITE2_CHANGELOG=$WEBSITE2_CHANGELOG" >> $GITHUB_ENV
+          
+          # Set the WEBSITE2_CHANGELOG variable to an environment variable, making sure it handles newlines properly
+          echo "WEBSITE2_CHANGELOG<<EOF" >> $GITHUB_ENV
+          echo "$WEBSITE2_CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
           
       - name: Fetch changelog of Open Klant
         id: fetch_changelogs_openklant
