--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -99,10 +99,9 @@ jobs:
         run: |
           WEBSITE2_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-zaak/main/CHANGELOG.rst | awk "/^${OPENZAAK_IMAGE_TAG_LATEST} / {flag=1} /^1\\.[0-9]+\\.[0-9]+ / && \$1 != \"${OPENZAAK_IMAGE_TAG_LATEST}\" {flag=0} flag")
           # Debugging output
-          echo "Changelog Open Zaak for version ${OPENZAAK_IMAGE_TAG_LATEST}:" >> $GITHUB_ENV 
           echo "$WEBSITE2_CHANGELOG"
           # Set the WEBSITE2_CHANGELOG variable to an environment variable, making sure it handles newlines properly
-          echo "WEBSITE2_CHANGELOG<<EOF" >> $GITHUB_ENV
+          echo "### Open Zaak<<EOF" >> $GITHUB_ENV
           echo "$WEBSITE2_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
           
